fix(security): prevent XSS by safely rendering window.location.href in test.html

--- a/frontend/public/test.html
+++ b/frontend/public/test.html
@@ -24,7 +24,9 @@
             
         // Check if auth is required
         results.innerHTML += `<p>LocalStorage auth token: ${localStorage.getItem('access_token') || 'none'}</p>`;
-        results.innerHTML += `<p>Current URL: ${window.location.href}</p>`;
+        const urlParagraph = document.createElement('p');
+        urlParagraph.textContent = `Current URL: ${window.location.href}`;
+        results.appendChild(urlParagraph);
     </script>
 </body>
 </html>
